# procurement-clipping

./: .env.example  CLAUDE.md  Procfile  pyproject.toml
.github/workflows/: collect.yml  publish.yml
agents/: ARCHITECT.md  BACKEND.md  DEVOPS.md  PRODUCT_OWNER.md  QA.md  SECURITY.md
docs/: ARCHITECTURE.md  PRD.md
src/bot/: clipping_bot.py
src/clipping/: bot.py  collect.py  publish.py
src/common/: claude.py  config.py  sheets.py
