[project]
name = "procurement-clipping"
version = "0.1.0"
description = "Curadoria de notícias para Head of Procurement via RSS + Claude + LinkedIn"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-telegram-bot>=21.0",
    "gspread>=6.0.0",
    "google-auth>=2.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "feedparser>=6.0.0",
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
